--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pixel Morph - Image to PDF</title>
+    <title>Image to PDF</title>
     <link rel="stylesheet" href="pdf.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"></script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/pdf-lib/dist/pdf-lib.min.js"></script>
@@ -74,7 +74,6 @@
         </div>
         <div>
             <button id="convertButton">Convert to PDF</button>
-            <!-- <a id="downloadLink" style="display:none;">Download PDF</a> -->
         </div>
     </div>
 </div>
